--- a/package.json
+++ b/package.json
@@ -13,11 +13,19 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "magic-sdk": "^11.0.0",
+    "moralis": "^2.10.0",
+    "moralis-v1": "^1.12.0",
     "next": "13.0.7",
+    "postcss": "^8.4.20",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-moralis": "^1.4.2",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4",
+    "web3uikit": "^1.0.4"
   }
 }
